--- a/src/App.css
+++ b/src/App.css
@@ -188,7 +188,7 @@ body {
 
 /* ================= Regular Navbar ================= */
 .navbar {
-  background-color: #1e3a8a;
+  background-color: #152758;
   padding: 12px 20px;
   position: sticky;
   top: 0;
@@ -300,7 +300,7 @@ body {
 .section {
   padding: 60px 20px;
   text-align: center;
-  background-color: #f7fafc;
+  background-color: #ffffff;
 
 }
 
@@ -499,17 +499,17 @@ footer {
   min-height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   background: linear-gradient(135deg, #1e3a8a, #3b82f6);
-  padding: 20px;
+  padding: 40px 20px;
 }
 
 .telecom-card {
-  background: #fff;
+  background: #ffffff;
   border-radius: 16px;
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
   max-width: 800px;
-  width: 100%;
+  width: 95%;
   padding: 40px;
 }
 
@@ -530,22 +530,36 @@ footer {
   background: #1e3a8a;
   color: #fff;
   padding: 12px 16px;
-  font-weight: 600;
+  font-weight: 800;
   border-radius: 8px 8px 0 0;
 }
 
 .telecom-section-list {
-  background: #f9fafb;
+  background: #d2e4f6;
   padding: 16px;
   border-radius: 0 0 8px 8px;
-  margin: 0;
+  margin: 0 auto;
+  width: 100%;
   list-style: none;
+  
+
 }
 
 .telecom-section-list li {
-  color: #3b82f6;
+  color: #0a3374;
   margin-bottom: 10px;
   font-size: 15px;
+  font-weight: bolder;
+  
+}
+
+.telecom-section-list img {
+  width: 100%;
+  max-width: 400px;
+  object-fit: cover;
+  border-radius: 8px;
+  display: block;
+  margin: 10px auto;
 }
 
 .telecom-footer-text {
@@ -695,3 +709,4 @@ footer {
     font-size: 14px;
   }
 }
+
